--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.5",
+    "@uploadcare/upload-client": "^6.12.1",
     "axios": "^1.4.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
