--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@clerk/clerk-sdk-node": "^4.10.14",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.5",
     "@uploadcare/rest-client": "^6.12.1",
     "@uploadcare/upload-client": "^6.12.1",
@@ -22,6 +23,8 @@
     "express": "^4.18.1",
     "mongoose": "^6.4.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-uploadcare": "^3.0.1",
     "node-fetch": "^2.6.12",
     "openai": "^3.3.0",
     "typescript": "^5.3.3"
