--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongodb": "^6.3.0",
     "mongoose": "^6.4.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
